--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -7,6 +7,8 @@
   height: 79px;
   color: $copy-white;
   background-color: $primary-dark-blue;
+  position: relative;
+  z-index: 999;
 
   @media (min-width: 769px) {
     height: 91px;
